apollo-router/src/plugins/telemetry/config_new/snapshots/apollo_router__plugins__telemetry__config_new__events__tests__connector_events_request@logs.snap
---
source: apollo-router/src/plugins/telemetry/config_new/events.rs
expression: yaml
---
- fields:
    kind: my.request.event
  level: INFO
  message: my request event message
