apollo-router/src/plugins/telemetry/config_new/snapshots/apollo_router__plugins__telemetry__config_new__events__tests__connector_events_response@logs.snap
---
source: apollo-router/src/plugins/telemetry/config_new/events.rs
expression: yaml
---
- fields:
    kind: my.response.event
  level: ERROR
  message: my response event message
