apollo-router/src/plugins/telemetry/config_new/snapshots/apollo_router__plugins__telemetry__config_new__events__tests__subgraph_events@logs.snap
---
source: apollo-router/src/plugins/telemetry/config_new/events.rs
expression: yaml
---
- fields:
    attributes: "{}"
    kind: my.request.event
  level: INFO
  message: my event message
  span:
    apollo.subgraph.name: subgraph
    graphql.document: "query { foo }"
    graphql.operation.name: ""
    name: subgraph
    otel.kind: INTERNAL
  spans:
    - apollo.subgraph.name: subgraph
      graphql.document: "query { foo }"
      graphql.operation.name: ""
      name: subgraph
      otel.kind: INTERNAL
- fields:
    attributes: "{\"subgraph.name\": \"subgraph\", \"response_status\": \"200\"}"
    kind: my.response.event
  level: ERROR
  message: my response event message
  span:
    apollo.subgraph.name: subgraph
    graphql.document: "query { foo }"
    graphql.operation.name: ""
    name: subgraph
    otel.kind: INTERNAL
    otel.status_code: OK
  spans:
    - apollo.subgraph.name: subgraph
      graphql.document: "query { foo }"
      graphql.operation.name: ""
      name: subgraph
      otel.kind: INTERNAL
      otel.status_code: OK
